<resources>
    <string name="app_name">madcloud</string>

    <string name="stats">STATS</string>
    <string name="quit">QUIT</string>
    <string name="play">PLAY</string>
    <string name="fx">FX</string>
    <string name="madcloud">MadCloud</string>
    <string name="title_activity_user_name">UserNameActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="play_again">Play again</string>
    <string name="scoreboard">Scoreboard</string>
    <string name="_0">0</string>
    <string name="home">Home</string>
</resources>